fix: z-footer breaks with empty data

--- a/src/index.html
+++ b/src/index.html
@@ -660,7 +660,6 @@
       </p>
     </section>
   </section>
-
   <z-footer copyrightuser='Zanichelli' data='{
       "zanichelliLinks": [{
           "title": "Zanichelli.it",
@@ -828,6 +827,9 @@
       }]
   }'></z-footer>
 
+  <!-- this components do not renders cause data prop is missing -->
+  <z-footer copyrightuser='Zanichelli'></z-footer>
+  <z-footer copyrightuser='Zanichelli' data=''></z-footer>
 </body>
 
 </html>
